<resources>
    <string name="app_name">Budgetmanagment</string>
    <string name="click_me">Click Me!</string>
    <string name="welcome">Welcome</string>
    <string name="plus">+</string>
    <string name="title">Neue Kategorie hinzufügen</string>
    <string name="uebersicht">Übersicht</string>
    <string name="year">2016</string>
    <string name="einkommen">Einkommen:</string>
    <string name="chf">CHF</string>
    <string name="chf1">CHF</string>
    <string name="chf3">CHF</string>
    <string name="chf4">CHF</string>
    <string name="chf5">CHF</string>
    <string name="haushalt">Haushalt</string>
    <string name="auto">Auto</string>
    <string name="freizeit">Freizeit</string>
    <string name="verfuegbar">Noch verfügbar:</string>
    <string name="amount"></string>
    <string name="minus">-</string>
    <string name="buttonSpeichern">Kategorie speichern</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="title_activity_statistic">statisticActivity</string>
    <string name="kategoriename">Kategoriename</string>
    <string name="berechne">Ausrechnen</string>

</resources>
