<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bteusj.budgetmanagment.MyActivity"
    android:background="#ffffff">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:width="1dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uebersicht"
        android:id="@+id/button2"
        android:width="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:onClick="inProgress"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/year"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/button2"
        android:layout_centerHorizontal="true"
        android:width="100dp"
        android:height="100dp"
        android:textSize="40sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/chf"
        android:id="@+id/editText"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_alignStart="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/chf1"
        android:id="@+id/editText2"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/chf4"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/einkommen"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/haushalt"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/freizeit"
        android:id="@+id/textView4"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/auto"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/chf5"
        android:id="@+id/editText4"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verfuegbar"
        android:id="@+id/textView6"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chf"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignEnd="@+id/editText4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/amount"
        android:id="@+id/result"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berechne"
        android:id="@+id/button4"
        android:nestedScrollingEnabled="true"
        android:onClick="calculateResult"
        android:layout_above="@+id/textView6"
        android:layout_toStartOf="@+id/result" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/textView8"
        android:textColor="#067b0b"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignTop="@+id/editText"
        android:layout_toStartOf="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/textView9"
        android:textColor="#ec0202"
        android:textAlignment="center"
        android:textSize="35dp"
        android:layout_alignBottom="@+id/editText2"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/textView10"
        android:textColor="#ec0202"
        android:textAlignment="center"
        android:textSize="35dp"
        android:layout_alignBottom="@+id/editText3"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:id="@+id/textView11"
        android:textColor="#ec0202"
        android:textAlignment="center"
        android:textSize="35dp"
        android:layout_alignBottom="@+id/editText4"
        android:layout_alignStart="@+id/textView10" />

</RelativeLayout>